// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWSRDSProvider where there is a DB instance creates DB instance 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "allocatedStorage": 20,
              "annotations": {
                "amazon.com/rds-instance-arn": "arn:aws:rds:eu-west-1:123456789012:db:my-database-instance",
                "backstage.io/managed-by-location": "aws-rds-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-rds-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://console.aws.amazon.com/rds/home?region=eu-west-1#database:id=my-database-instance",
              },
              "automaticMinorVersionUpgrade": true,
              "backupRetentionPeriod": 7,
              "dbEngine": "mysql",
              "dbEngineVersion": "8.0.35",
              "dbInstanceClass": "db.t3.micro",
              "isMultiAz": false,
              "isPerformanceInsightsEnabled": false,
              "isPubliclyAccessible": false,
              "labels": {
                "Environment": "production--staging",
              },
              "name": "my-database-instance",
              "preferredBackupWindow": "02:00-03:00",
              "preferredMaintenanceWindow": "sun:03:00-sun:04:00",
              "storageType": "gp2",
              "title": "my-database-instance",
            },
            "spec": {
              "owner": "unknown",
              "type": "rds-instance",
            },
          },
          "locationKey": "aws-rds-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;

exports[`AWSRDSProvider where there is a DB instance creates DB instance with a template 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazon.com/rds-instance-arn": "arn:aws:rds:eu-west-1:123456789012:db:my-database-instance",
                "backstage.io/managed-by-location": "aws-rds-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-rds-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://console.aws.amazon.com/rds/home?region=eu-west-1#database:id=my-database-instance",
              },
              "dbInstanceClass": "db.t3.micro",
              "name": "my-database-instance",
              "title": "my-database-instance",
            },
            "spec": {
              "type": "rds-instance",
            },
          },
          "locationKey": "aws-rds-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;
